Implementation of a list of books by tags, a list of books by genre, and an author page